# TimeFormatStrings

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  configure.ac
.github/workflows/: build.yml
src/: .tfs.h.swp  tfs.c  tfs.h  tfs_excel.c  tfs_excel.h  tfs_excel_parser.c  tfs_excel_parser.h  tfs_excel_parser.rl  tfs_internal.c  tfs_internal.h  tfs_posix.c  tfs_posix.h  tfs_sas.c  tfs_sas.h  tfs_spss.c  tfs_spss.h  tfs_stata.c  tfs_stata.h  tfs_stata_parser.c  tfs_stata_parser.h  tfs_stata_parser.rl  tfs_token.c  tfs_token.h  tfs_uts35.c  tfs_uts35.h  tfs_uts35_parser.c  tfs_uts35_parser.h  tfs_uts35_parser.rl
src/fuzz/: fuzz_format.c  fuzz_format.h  fuzz_format_excel.c  fuzz_format_posix.c  fuzz_format_sas.c  fuzz_format_spss.c  fuzz_format_stata.c  fuzz_format_uts35.c
src/test/: tfs_test.c
test/: tfs_test.c
